--- a/client/main.html
+++ b/client/main.html
@@ -1,7 +1,10 @@
 <head>
-  <title>My first App with Meteor</title>
+  <title>La botiga dels retocs</title>
 </head>
-
+<p>
+<input id="button1" class="btn btn-primary" type="button" value="Click1" />
+<input id="button2" class="btn btn-primary" type="button" value="Click2" />
+</p>
 <body>
   <!-- Home template -->
   {{> home }}
