--- a/client/main.html
+++ b/client/main.html
@@ -1,10 +1,7 @@
 <head>
-  <title>La botiga dels retocs</title>
+  <title>My first App with Meteor</title>
 </head>
-<p>
-<input id="button1" class="btn btn-primary" type="button" value="Click1" />
-<input id="button2" class="btn btn-primary" type="button" value="Click2" />
-</p>
+
 <body>
   <!-- Home template -->
   {{> home }}
