--- a/client/tmpl/donde_estamos.html
+++ b/client/tmpl/donde_estamos.html
@@ -1,4 +1,4 @@
-<template name= "donde_estamos">
-	Donde estamos
+<template name="donde_estamos">
+	<p>donde  fwefe sffwfefesjhfwekbjefw</p>
 	
 </template>
