--- a/client/tmpl/intro.html
+++ b/client/tmpl/intro.html
@@ -1,4 +1,12 @@
-<template name= "intro">
-	Intro
-	
+<template name="intro">
+	<div class="container-fluid">
+		    <div class="row-fluid">	
+		        <div class="page-header">
+		          <div class="hero-unit">
+		              <h1>PLa botiga dels retocs</h1>
+		              <p>Manage your projects here.</p>
+		          </div>
+		        </div>
+		    </div>
+		</div>
 </template>
