--- a/client/main.html
+++ b/client/main.html
@@ -1,8 +1,7 @@
 <head>
-  <title>La botiga dels retocs - Reus</title>
+  <title>My first App with Meteor</title>
 </head>
 
-<body>
-  <!-- Home template -->
-  {{> home }}
-</body>
+<template name="layout">
+  {{> yield}}
+</template>
